test/conformance/chainsaw/validate/clusterpolicy/standard/cel/deny/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: restrict-operations-on-pod
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
