test/conformance/chainsaw/validate/clusterpolicy/standard/cel/deny/chainsaw-test.yaml
# yaml-language-server: $schema=https://raw.githubusercontent.com/kyverno/chainsaw/main/.schemas/json/test-chainsaw-v1alpha1.json
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deny
spec:
  concurrent: false
  steps:
  - name: step-01
    try:
    - script:
        content: kubectl run nginx --image=nginx
  - name: create policy
    use:
      template: ../../../../../_step-templates/create-policy.yaml
      with:
        bindings:
        - name: file
          value: policy.yaml
  - name: wait policy ready
    use:
      template: ../../../../../_step-templates/cluster-policy-ready.yaml
      with:
        bindings:
        - name: name
          value: restrict-operations-on-pod
  - name: step-03
    try:
    - script:
        content: "if kubectl run --image=busybox foo\nthen \n  exit 1\nelse \n  exit
          0\nfi\n"
  - name: step-04
    try:
    - script:
        content: "if kubectl label pod nginx app=nginx\nthen \n  exit 1\nelse \n  exit
          0\nfi\n"
  - name: step-05
    try:
    - script:
        content: "if kubectl delete pod nginx\nthen \n  exit 1\nelse \n  exit
          0\nfi\n"
